--- a/models_paper_SVMvsDL/analysis.ipynb
+++ b/models_paper_SVMvsDL/analysis.ipynb
@@ -2,76 +2,309 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "import pickle as pkl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logs_folder = \"logs\"\n",
-    "# TODO hacerlo para todas las folders y pintándolo un poco bonito\n",
-    "model_name = \"svm_wd_10pc\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = pkl.load(open(os.path.join(logs_folder, model_name,  model_name + \"_y_proba_test.pkl\"), \"rb\"))\n",
-    "y_test = pkl.load(open(os.path.join(logs_folder, model_name, model_name + \"_y_test.pkl\"), \"rb\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the best threshold to maximize F1 score\n",
+    "import pickle as pkl\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import precision_recall_curve\n",
     "from sklearn.metrics import average_precision_score\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import classification_report  # classfication summary\n",
-    "from sklearn.metrics import log_loss\n",
-    "\n",
-    "# Get the best threshold to maximize F1 score\n",
-    "precision, recall, thresholds = precision_recall_curve(y_test, y_pred)\n",
-    "f1_scores = 2 * (precision * recall) / (precision + recall)\n"
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import log_loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs_folder = \"logs\"\n",
+    "svm_model_names = [\"svm_rbf_1pc\",\n",
+    "                   \"svm_rbf_10pc\",\n",
+    "                   \"svm_wd_1pc\",\n",
+    "                   \"svm_wd_10pc\",\n",
+    "                   \"svm_wd_50pc\",\n",
+    "                   \"cascade_wd_1pc\",\n",
+    "                   \"cascade_wd_10pc\",\n",
+    "                   \"cascade_wd_50pc\",\n",
+    "                   \"cascade_wd_100pc\"]\n",
+    "dl_model_names = [\"cnn\",\n",
+    "                  \"lstm\",\n",
+    "                  \"lstm_cnn\",\n",
+    "                  \"bilstm\",\n",
+    "                  \"bilstm_cnn\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.44060301507537686"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: svm_rbf_1pc\n",
+      "\tAUC: 0.7605720086816495\n",
+      "\tBCE: 0.25375888792174306\n",
+      "\tAccuracy: 0.8706705969049373\n",
+      "\tBest F1 score: 0.3542435424354243\n",
+      "\tBest threshold: 0.2007935477945658\n",
+      "\n",
+      "Model: svm_rbf_10pc\n",
+      "\tAUC: 0.805303548786637\n",
+      "\tBCE: 0.2456143603291095\n",
+      "\tAccuracy: 0.8850248664579112\n",
+      "\tBest F1 score: 0.42541436464088395\n",
+      "\tBest threshold: 0.21305174595278065\n",
+      "\n",
+      "Model: svm_wd_1pc\n",
+      "\tAUC: 0.763684099978996\n",
+      "\tBCE: 0.24987093041015374\n",
+      "\tAccuracy: 0.895725865880619\n",
+      "\tBest F1 score: 0.37610619469026546\n",
+      "\tBest threshold: 0.24552023941789383\n",
+      "\n",
+      "Model: svm_wd_10pc\n",
+      "\tAUC: 0.8145622477770108\n",
+      "\tBCE: 0.24022914628788306\n",
+      "\tAccuracy: 0.8974396758150672\n",
+      "\tBest F1 score: 0.44060301507537686\n",
+      "\tBest threshold: 0.23663770839222212\n",
+      "\n",
+      "Model: svm_wd_50pc\n",
+      "\tAUC: 0.8411283089030662\n",
+      "\tBCE: 0.22527516907527714\n",
+      "\tAccuracy: 0.9004759589172303\n",
+      "\tBest F1 score: 0.47161913703399444\n",
+      "\tBest threshold: 0.21851200895707074\n",
+      "\n",
+      "Model: cascade_wd_1pc\n",
+      "\tAUC: 0.7638433802422461\n",
+      "\tBCE: 0.24989481460289692\n",
+      "\tAccuracy: 0.8909358879882093\n",
+      "\tBest F1 score: 0.38155136268343814\n",
+      "\tBest threshold: 0.22462711047963727\n",
+      "\n",
+      "Model: cascade_wd_10pc\n",
+      "\tAUC: 0.7981075422527051\n",
+      "\tBCE: 0.3015834455258111\n",
+      "\tAccuracy: 0.8800515748756678\n",
+      "\tBest F1 score: 0.4192685102586976\n",
+      "\tBest threshold: 0.27712432515656127\n",
+      "\n",
+      "Model: cascade_wd_50pc\n",
+      "\tAUC: 0.8142814796320502\n",
+      "\tBCE: 0.32555870213856214\n",
+      "\tAccuracy: 0.8878614846196353\n",
+      "\tBest F1 score: 0.43449173016167997\n",
+      "\tBest threshold: 0.33046924617279066\n",
+      "\n",
+      "Model: cascade_wd_100pc\n",
+      "\tAUC: 0.8130913134932874\n",
+      "\tBCE: 0.33802505536634264\n",
+      "\tAccuracy: 0.8944188616688156\n",
+      "\tBest F1 score: 0.43278558701247277\n",
+      "\tBest threshold: 0.34667051179036895\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jabarbero/anaconda3/envs/tss/lib/python3.7/site-packages/ipykernel_launcher.py:7: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  import sys\n",
+      "/home/jabarbero/anaconda3/envs/tss/lib/python3.7/site-packages/ipykernel_launcher.py:7: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  import sys\n",
+      "/home/jabarbero/anaconda3/envs/tss/lib/python3.7/site-packages/ipykernel_launcher.py:7: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  import sys\n"
+     ]
     }
    ],
    "source": [
-    "# Remove NaNs\n",
-    "f1_scores = f1_scores[~np.isnan(f1_scores)]\n",
-    "np.max(f1_scores)"
+    "for model_name in svm_model_names:\n",
+    "    y_pred = pkl.load(open(os.path.join(logs_folder, model_name,  model_name + \"_y_proba_test.pkl\"), \"rb\"))\n",
+    "    y_test = pkl.load(open(os.path.join(logs_folder, model_name, model_name + \"_y_test.pkl\"), \"rb\"))\n",
+    "\n",
+    "    # Get the best threshold to maximize F1 score\n",
+    "    precision, recall, thresholds = precision_recall_curve(y_test, y_pred)\n",
+    "    f1_scores = 2 * (precision * recall) / (precision + recall)\n",
+    "\n",
+    "    # Remove NaNs\n",
+    "    f1_scores = f1_scores[~np.isnan(f1_scores)]\n",
+    "    best_f1 = np.max(f1_scores)\n",
+    "\n",
+    "    # Get the threshold that maximizes F1 score\n",
+    "    best_threshold = thresholds[np.argmax(f1_scores)]\n",
+    "\n",
+    "    # Get AUC\n",
+    "    auc = roc_auc_score(y_test, y_pred)\n",
+    "\n",
+    "    # Get Accuracy\n",
+    "    y_pred_binary = np.where(y_pred > best_threshold, 1, 0)\n",
+    "    acc = accuracy_score(y_test, y_pred_binary)\n",
+    "\n",
+    "    # Get Binary Cross Entropy\n",
+    "    bce = log_loss(y_test, y_pred)\n",
+    "\n",
+    "    print(f\"Model: {model_name}\")\n",
+    "    print(f\"\\tAUC: {auc}\")\n",
+    "    print(f\"\\tBCE: {bce}\")\n",
+    "    print(f\"\\tAccuracy: {acc}\")\n",
+    "    print(f\"\\tBest F1 score: {best_f1}\")\n",
+    "    print(f\"\\tBest threshold: {best_threshold}\")\n",
+    "    print(f\"\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: cnn\n",
+      "\tAUCs: [0.8646898420352422, 0.8624803123643846, 0.8667930850234149, 0.869498658408072, 0.8558056391713512]\n",
+      "\tMean AUC: 0.8638535074004932\n",
+      "\tBCEs: [0.2191533011711589, 0.2202144586958365, 0.21706956373718111, 0.2168281029006575, 0.22041746684123603]\n",
+      "\tMean BCE: 0.218736578669214\n",
+      "\tAccuracies: [0.8979193374887642, 0.8968804797901655, 0.9052687031224673, 0.9013932481617376, 0.9026163004877473]\n",
+      "\tMean Accuracy: 0.9008156138101764\n",
+      "\tBest F1 scores: [0.49609921984396876, 0.48813137778428, 0.5004080046629105, 0.4996635262449529, 0.49994324845824983]\n",
+      "\tMean F1 score: 0.4968490753988724\n",
+      "\n",
+      "Model: lstm\n",
+      "\tAUCs: [0.9161555083599178, 0.9161426486840718, 0.9170567239579034, 0.9101864796749368, 0.916407092466247]\n",
+      "\tMean AUC: 0.9151896906286152\n",
+      "\tBCEs: [0.17597896551588443, 0.1758352353718125, 0.17538831009743364, 0.18241176179152788, 0.17511661683772237]\n",
+      "\tMean BCE: 0.17694617792287617\n",
+      "\tAccuracies: [0.9281567275245716, 0.92627425843243, 0.9318443039653419, 0.9278288610877798, 0.9283261865817898]\n",
+      "\tMean Accuracy: 0.9284860675183826\n",
+      "\tBest F1 scores: [0.6018985403695009, 0.6098773616175008, 0.6114098470845236, 0.5956322503405853, 0.6076750892334993]\n",
+      "\tMean F1 score: 0.605298617729122\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jabarbero/anaconda3/envs/tss/lib/python3.7/site-packages/ipykernel_launcher.py:12: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  if sys.path[0] == \"\":\n",
+      "/home/jabarbero/anaconda3/envs/tss/lib/python3.7/site-packages/sklearn/metrics/_classification.py:2279: RuntimeWarning: divide by zero encountered in log\n",
+      "  loss = -(transformed_labels * np.log(y_pred)).sum(axis=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: lstm_cnn\n",
+      "\tAUCs: [0.9131604292306349, 0.9131270810052668, 0.9126970942728334, 0.9135971209405636, 0.9111315456064472]\n",
+      "\tMean AUC: 0.9127426542111492\n",
+      "\tBCEs: [0.18002166019584465, 0.17994519395892078, 0.18010478973328256, 0.17977482876807654, inf]\n",
+      "\tMean BCE: inf\n",
+      "\tAccuracies: [0.9246607134963087, 0.9242002269277809, 0.9230913752707661, 0.9266500154723487, 0.925692203409811]\n",
+      "\tMean Accuracy: 0.9248589069154031\n",
+      "\tBest F1 scores: [0.5920280892151777, 0.5924517087667163, 0.5895399134880064, 0.5926092650188246, 0.5903404013323585]\n",
+      "\tMean F1 score: 0.5913938755642167\n",
+      "\n",
+      "Model: bilstm\n",
+      "\tAUCs: [0.9007836049642195, 0.9244689729053319, 0.9219598174267964, 0.9213560963992251, 0.9174661776275277]\n",
+      "\tMean AUC: 0.9172069338646202\n",
+      "\tBCEs: [0.1874940245779584, 0.16792981718234692, 0.17103475237913424, 0.1702295514301942, 0.17497794985892665]\n",
+      "\tMean BCE: 0.17433321908571206\n",
+      "\tAccuracies: [0.9220709370349086, 0.9339441227178286, 0.9310854221004081, 0.9339662260731179, 0.9303154885578298]\n",
+      "\tMean Accuracy: 0.9302764392968186\n",
+      "\tBest F1 scores: [0.5772866249675266, 0.6292237065221886, 0.6219329803144832, 0.620896785109983, 0.6036336204186835]\n",
+      "\tMean F1 score: 0.6105947434665729\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jabarbero/anaconda3/envs/tss/lib/python3.7/site-packages/ipykernel_launcher.py:12: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  if sys.path[0] == \"\":\n",
+      "/home/jabarbero/anaconda3/envs/tss/lib/python3.7/site-packages/sklearn/metrics/_classification.py:2279: RuntimeWarning: divide by zero encountered in log\n",
+      "  loss = -(transformed_labels * np.log(y_pred)).sum(axis=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: bilstm_cnn\n",
+      "\tAUCs: [0.9122542562107955, 0.9133413831881478, 0.9121173511782544, 0.9108150719287971, 0.9086462094004933]\n",
+      "\tMean AUC: 0.9114348543812977\n",
+      "\tBCEs: [0.18025497072629545, 0.17918581666582434, 0.18091052692891366, inf, 0.18310311355128436]\n",
+      "\tMean BCE: inf\n",
+      "\tAccuracies: [0.9237986826400247, 0.9250512061064203, 0.9255669510631714, 0.9199011243240057, 0.9207778907504826]\n",
+      "\tMean Accuracy: 0.923019170976821\n",
+      "\tBest F1 scores: [0.5906220929081805, 0.5920757138273981, 0.5891993005571143, 0.585487683977732, 0.5829163272431049]\n",
+      "\tMean F1 score: 0.5880602237027059\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model_name in dl_model_names:\n",
+    "    aucs = []\n",
+    "    bces = []\n",
+    "    accs = []\n",
+    "    f1s = []\n",
+    "    for fold in range(1, 6):\n",
+    "        y_pred = pkl.load(open(os.path.join(logs_folder, model_name,  model_name + \"_\" + str(fold) + \"_y_pred.pkl\"), \"rb\"))\n",
+    "        y_test = pkl.load(open(os.path.join(logs_folder, model_name, model_name + \"_\" + str(fold) + \"_y_test.pkl\"), \"rb\"))\n",
+    "\n",
+    "        # Get the best threshold to maximize F1 score\n",
+    "        precision, recall, thresholds = precision_recall_curve(y_test, y_pred)\n",
+    "        f1_scores = 2 * (precision * recall) / (precision + recall)\n",
+    "\n",
+    "        # Remove NaNs\n",
+    "        f1_scores = f1_scores[~np.isnan(f1_scores)]\n",
+    "        best_f1 = np.max(f1_scores)\n",
+    "\n",
+    "        # Get the threshold that maximizes F1 score\n",
+    "        best_threshold = thresholds[np.argmax(f1_scores)]\n",
+    "\n",
+    "        # Get AUC\n",
+    "        auc = roc_auc_score(y_test, y_pred)\n",
+    "\n",
+    "        # Get Accuracy\n",
+    "        y_pred_binary = np.where(y_pred > best_threshold, 1, 0)\n",
+    "        acc = accuracy_score(y_test, y_pred_binary)\n",
+    "\n",
+    "        # Get Binary Cross Entropy\n",
+    "        bce = log_loss(y_test, y_pred)\n",
+    "\n",
+    "        aucs.append(auc)\n",
+    "        bces.append(bce)\n",
+    "        accs.append(acc)\n",
+    "        f1s.append(best_f1)\n",
+    "\n",
+    "    print(f\"Model: {model_name}\")\n",
+    "    print(f\"\\tAUCs: {aucs}\")\n",
+    "    print(f\"\\tMean AUC: {np.mean(aucs)}\")\n",
+    "    print(f\"\\tBCEs: {bces}\")\n",
+    "    print(f\"\\tMean BCE: {np.mean(bces)}\")\n",
+    "    print(f\"\\tAccuracies: {accs}\")\n",
+    "    print(f\"\\tMean Accuracy: {np.mean(accs)}\")\n",
+    "    print(f\"\\tBest F1 scores: {f1s}\")\n",
+    "    print(f\"\\tMean F1 score: {np.mean(f1s)}\")\n",
+    "    print(f\"\")\n",
+    "\n"
    ]
   },
   {
@@ -98,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.7.15 (default, Nov 24 2022, 21:12:53) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
